# ToneDrop

./: .gitignore  Makefile  README.md  \  dune  dune-project  flake.nix  l  package-lock.json  package.json  package_copy.json  tone-drop.install  tone-drop.opam  webpack.config.js
_build/: .db  .digest-db  log
_build/default/: tone-drop.dune-package
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/9aa86304e1964cfc127b38093f18cb83/: build_info__Build_info_data.ml-gen  dune__exe___ppx.cmi  dune__exe___ppx.cmo
_build/default/.ppx/9b08511fbad9c15355a1e1f8e80934bc/: build_info__Build_info_data.cmx  build_info__Build_info_data.ml-gen  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/src/: ReactApp.re  ReactApp.re.ml  ReactApp.re.pp.ml  hello.pp.ml
_build/default/src/.merlin-conf/: melange-node  melange-output
_build/default/src/.node.mobjs/melange/: melange__Hello.cmi  melange__Hello.cmj  melange__Hello.cmt
_build/default/src/.output.mobjs/melange/: melange__ReactApp.cmi  melange__ReactApp.cmj  melange__ReactApp.cmt
_build/default/src/music/: music.cma  music.cmxa  music.cmxs  music.ml
_build/default/src/music/.merlin-conf/: lib-music
_build/default/src/output/src/: ReactApp.js
_build/default/src/synth/: synth.pp.ml
_build/default/src/tests/: test_music.ml
public/: index.html  main.js  styles.css
src/: Hello.ml  MusicState.re  ReactApp.copyre  ReactApp.re  dune  progression._re
src/music/: dune  music.ml
src/synth/: ToneInterop.js  dune  synth.ml
src/tests/: dune  test_music.ml
(+23 files in other folders)
